tests/samples/invalid/reserved_keyword_as_identifier.pn

fn foo()
{
	var usize = true;
}

fn foo1() {
	usize = false;
}

fn bar()
{
	start:
	extern:
	end:
}

fn do_something()
{
	var baz = struct { x: 0 };
}
